# libsds011

./: CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
src/: CMakeLists.txt  sds011.c  sds011.h
test/: CMakeLists.txt  test_decoding.c  test_encoding.c  test_support.c  test_support.h
