include_directories ("${PROJECT_SOURCE_DIR}/src")
add_executable(test_decoding test_decoding.c test_support.c)
add_executable(test_encoding test_encoding.c test_support.c)
add_dependencies(test_decoding test_decoding)
add_dependencies(test_encoding test_encoding)
add_test(test_decoding test_decoding)
add_test(test_encoding test_encoding)
target_link_libraries(test_decoding sds011 cmocka)
target_link_libraries(test_encoding sds011 cmocka)
